syntax = "proto3";

package api.prom;

import "google/api/annotations.proto";
import "validate/validate.proto";
import "base.proto";
import "prom/node.proto";

option go_package = "prometheus-manager/api/prom/v1;v1";
option java_multiple_files = true;
option java_package = "api.prom.v1";

service File {
	rpc CreateFile (CreateFileRequest) returns (CreateFileReply) {
		option (google.api.http) = {
			post: "/prom/v1/file/add"
			body: "*"
		};
	}
	rpc UpdateFile (UpdateFileRequest) returns (UpdateFileReply) {
		option (google.api.http) = {
			put: "/prom/v1/file/edit/{id}"
			body: "*"
		};
	}
	rpc DeleteFile (DeleteFileRequest) returns (DeleteFileReply) {
		option (google.api.http) = {
			delete: "/prom/v1/file/delete/{id}"
		};
	}
	rpc GetFile (GetFileRequest) returns (GetFileReply) {
		option (google.api.http) = {
			get: "/prom/v1/file/detail/{id}"
		};
	}
	rpc ListFile (ListFileRequest) returns (ListFileReply) {
		option (google.api.http) = {
			post: "/prom/v1/file/list"
			body: "*"
		};
	}
}

message CreateFileRequest {
	FileItem file = 1 [(validate.rules).message.required = true];
}
message CreateFileReply {
	Response response = 1;
}

message UpdateFileRequest {
	uint32 id = 1 [(validate.rules).uint32 = {gt: 0}];
	FileItem file = 2 [(validate.rules).message.required = true];
}
message UpdateFileReply {
	Response response = 1;
}

message DeleteFileRequest {
	uint32 id = 1 [(validate.rules).uint32 = {gt: 0}];
}
message DeleteFileReply {
	Response response = 1;
}

message GetFileRequest {
	uint32 id = 1 [(validate.rules).uint32 = {gt: 0}];
}
message GetFileReply {
	Response response = 1;
	FileItem file = 2;
}

message ListFileRequestParams {
	string keyword = 1 [(validate.rules).string = {min_len: 0, max_len: 64}];
}

message ListFileRequest {
	PageRequest page = 1;
	ListFileRequestParams params = 2;
}
message ListFileReply {
	Response response = 1;
	PageReply page = 2;
	repeated FileItem list = 3;
}